package bezienswaardigheden;

public record Attraction(String name,String address, Double rating) {
}
