package bezienswaardigheden;

public record BookingComAttraction (String name, String location, double rating){
}
