package bezienswaardigheden;

public record TripadvisorAttraction (String title, String address, double score){
}
